# Stellar-OneTap-Transit-Unified

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
contracts/fare-token/: Cargo.toml
contracts/fare-token/src/: lib.rs  test.rs
contracts/operator-registry/: Cargo.toml
contracts/operator-registry/src/: lib.rs  test.rs
contracts/transit-controller/: Cargo.toml
contracts/transit-controller/src/: lib.rs  test.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  App.test.jsx  config.js  stellar.js
frontend/src/test/: App.test.jsx
scripts/: deploy_testnet.sh
